# NumericalMethodsForSoftMatter

./: .gitignore  README.md
MolecularDynamics/Ex2/: analyses.ipynb  lennardjones.lmp
MolecularDynamics/Ex2/data_from_lammps/: log.lammps
MolecularDynamics/Ex3/: README.md  analysis.ipynb  fcc108.xyz  fcc32.xyz
MolecularDynamics/Ex3/code/: NDMolDyn.hpp  NDMolDyn.tpp  Particle.hpp  dump.txt  main.cpp
MolecularDynamics/Ex4/: CMakeLists.txt  analysis.ipynb  parameter.yaml
MolecularDynamics/Ex4/code/: NDMolDyn.hpp  NDMolDyn.tpp  Parameter.hpp  Particle.hpp  Patches.hpp  batch.cpp  main.cpp  multipleMarkovChains.cpp  sfml.cpp
MolecularDynamics/Ex5/: Brusselator.ipynb
MolecularDynamics/Ex6/: BrownianLangevin.ipynb
code/Ex1/: notebook1.ipynb
code/Ex2/: notebook2.ipynb
code/Ex4/: MCMCengine.cpp  MCMCengine.hpp  README.md  analysis.ipynb  configuration.cpp  configuration.hpp  graphics.cpp  grid.cpp  main.cpp  results.hpp
code/Ex5/: ActiveIsingModel.cpp  ActiveIsingModel.hpp  README.md  analysis.ipynb  batch.cpp  main.cpp  player.cpp  sampler.cpp
tex/: NMSM.tex
tex2/: main.tex
tex2/EXER/: ex1.tex  ex2.tex  ex3.tex  ex4.tex  ex5.tex  ex6.tex
